package io.javaside.ts4e.core;



public interface DocumentManager {

    TSDocument getDocument(DocumentDescriptor id);
}
